--- a/index.html
+++ b/index.html
@@ -5,88 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Seni dan budaya Malaysia</title>
 <style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
+    body {
+      margin: 0;
+    }
 
-li {
-  float: left;
-}
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+    .navbar a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
 
-li a:hover {
-  background-color: #111;
-}
+    .navbar a:hover {
+      background: #ddd;
+      color: black;
+    }
 
-.sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
+    .main {
+      padding-top: 50px;
+      margin-top: 30px;
+      height: 1500px;
+      /* Used in this example to enable scrolling */
+    }
 </style>
 </head>
 <body>
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Bangunan</a>
-  <a href="#">Pakaian</a>
-  <a href="#">Tarian</a>
-  <a href="AlatMuzik.html">Alat Muzik</a>
-  <a href="#">Makanan</a>
-</div>
-<ul>
-  <li><span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span></li>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <h3>Seni Budaya Malaysia</h3>
+    <a href="bangunan.html">Bangunan</a>
+    <a href="pakaian.html">Pakaian</a>
+    <a href="alat_muzik.html">Alat Muzik</a>
+    <a href="makanan.html">Makanan</a>
+    <a href="tarian.html">Tarian</a>
+  </div>
+  <div class="navbar">
+    <span style="font-size:35px;cursor:pointer" class="all-nav" onclick="openNav()" class="text-left">&#9776;</span>
+    <a href="articles.html">Ruang Imej</a>
+    <a href="#aboutus">Pengenalan Ahli Malaysia</a>
+  </div>
   <script>
     function openNav() {
       document.getElementById("mySidenav").style.width = "250px";
-       }
+    }
 
     function closeNav() {
       document.getElementById("mySidenav").style.width = "0";
-       }
-</script>
-  <li><a href="#home">Laman Utama</a></li>
-  <li><a href="#about">Pengenalan Ahli Projek</a></li>
-</ul>
+    }
+  </script>
 </body>
 </html>
 
