--- a/index.html
+++ b/index.html
@@ -5,31 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Seni dan budaya Malaysia</title>
 <style>
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  background-color: #111;
-}
-
-.sidenav {
+    body {
+      margin: 0;
+    }
+    .sidenav {
   height: 100%;
   width: 0;
   position: fixed;
@@ -62,31 +41,70 @@ li a:hover {
   font-size: 36px;
   margin-left: 50px;
 }
+
+@media screen and (max-height: 450px) {
+  .sidenav {
+    padding-top: 15px;
+  }
+
+  .sidenav a {
+    font-size: 18px;
+  }
+}
+    .navbar {
+      overflow: hidden;
+      background-color: #333;
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+
+    .navbar a {
+      float: left;
+      display: block;
+      color: #f2f2f2;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
+
+    .navbar a:hover {
+      background: #ddd;
+      color: black;
+    }
+
+    .main {
+      padding-top: 50px;
+      margin-top: 30px;
+      height: 1500px;
+      /* Used in this example to enable scrolling */
+    }
 </style>
 </head>
 <body>
 <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Bangunan</a>
-  <a href="#">Pakaian</a>
-  <a href="#">Tarian</a>
-  <a href="AlatMuzik.html">Alat Muzik</a>
-  <a href="#">Makanan</a>
-</div>
-<ul>
-  <li><span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span></li>
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <h3 style="text-align:center;">Seni Budaya Malaysia</h3>
+    <a href="bangunan.html">Bangunan</a>
+    <a href="pakaian.html">Pakaian</a>
+    <a href="alat_muzik.html">Alat Muzik</a>
+    <a href="makanan.html">Makanan</a>
+    <a href="tarian.html">Tarian</a>
+  </div>
+  <div class="navbar">
+    <span style="font-size:35px;cursor:pointer" class="all-nav" onclick="openNav()" class="text-left">&#9776;</span>
+    <a href="articles.html">Ruang Imej</a>
+    <a href="#aboutus">Pengenalan Ahli Malaysia</a>
+  </div>
   <script>
     function openNav() {
       document.getElementById("mySidenav").style.width = "250px";
-       }
+    }
 
     function closeNav() {
       document.getElementById("mySidenav").style.width = "0";
-       }
-</script>
-  <li><a href="#home">Laman Utama</a></li>
-  <li><a href="#about">Pengenalan Ahli Projek</a></li>
-</ul>
+    }
+  </script>
 </body>
 </html>
-
